<resources>
    <string name="app_name">whatsApp</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="phone_number">Phone number</string>
    <string name="login">Login</string>
    <string name="send_code">send code</string>
    <string name="write">write the code here</string>
    <string name="verify">"verify "</string>
    <string name="Verify">verify</string>
    <string name="chat">chat</string>
    <string name="calls">calls</string>
    <string name="status">status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="settings">Settings</string>
    <string name="starred_message">Starred message</string>
    <string name="linked_devices">Linked devices</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="group">New group</string>
    <string name="status_privacy">Status privacy</string>
    <string name="setting">Settings</string>
    <string name="clear">Clear call log</string>
</resources>