<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/new_group"
        android:title="@string/group"/>
    <item
        android:id="@+id/new_broadcast"
        android:title="@string/new_broadcast"
        />
    <item
        android:id="@+id/linked_devices"
        android:title="@string/linked_devices"/>
    <item
        android:id="@+id/starred_message"
        android:title="@string/starred_message"/>
    <item
        android:id="@+id/setting1"
        android:title="@string/settings"/>
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/search_icon"
        app:showAsAction="always"/>

</menu>